@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.3"
-#define public MagickPackageVersionAddendum ".020081031"
+#define public MagickPackageVersionAddendum ".020081101"
 #define public MagickPackageReleaseDate "unreleased"
