@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-11-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/color.c (FuzzyColorMatch): If fuzz is zero then
+        completely use the result of ColorMatch() rather than entering
+        unnecessary expensive code.
+
+</UL>
+<p>
 2008-10-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
